[package]
name = "oxide"
description = "CLI for the Oxide rack"
authors = ["Oxide Computer Company"]
version = "0.1.0-beta.5"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/oxidecomputer/oxide.rs"
readme = "README.md"
publish = false

default-run = "oxide"

[package.metadata.dist]
dist = true

[package.metadata.wix]
upgrade-guid = "CCD04A72-2C3C-4750-8914-423EF12ABD4D"
path-guid = "C4828A77-4510-4BC2-8B54-B892D01972F6"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
oauth2 = { workspace = true }
open = { workspace = true }
oxide-api = { workspace = true }
predicates = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tabwriter = { workspace = true }
thouart = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
dropshot = { workspace = true }
expectorate = { workspace = true }
httpmock = { workspace = true }
oxide-httpmock = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
rcgen = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
serial_test = { workspace = true }
tempfile = { workspace = true }
test-common = { workspace = true }

[build-dependencies]
built = { workspace = true }
